--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mysql2": "^3.9.7",
     "next": "^14.2.4",
     "react": "^18.3.1",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "rehype-raw": "^7.0.0",
