--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^9.6.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "@types/slug": "^5.0.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
     "geist": "^1.3.0",
     "gray-matter": "^4.0.3",
@@ -35,6 +39,8 @@
     "server-only": "^0.0.1",
     "slug": "^9.1.0",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
